[Bug 997254] [l10n] [hi-IN] Translate Marketplace Lite (Darjeeling) in Hindi

--- a/src/lite/l10n/locales.ini
+++ b/src/lite/l10n/locales.ini
@@ -102,3 +102,64 @@ reviewCount[two]   = {{ n }} évaluations
 reviewCount[few]   = {{ n }} évaluations
 reviewCount[many]  = {{ n }} évaluations
 reviewCount[other] = {{ n }} évaluations
+
+[hi-IN]
+description = विवरण
+featuredApps = चित्रित एप्प्स
+install = इन्स्टॉल
+installErrorGeneric = एप्प इन्स्टॉल भूल: {error}
+installErrorDownloading = एप्प  डाउनलोड नहीं किया जा सकता है
+installSuccess = *{app}* इनस्टॉल्ड्
+installError = *{app}* इन्स्टॉल करने में विफल
+installOffline = ऑनलाइन होने पर *{app}* इनस्टॉल्ड् किया जाएगा
+open = खोलें
+launch = लॉन्च
+queued = कतारबद्ध
+ratingRating: रेटिंग: {rating}
+resultsTime = (लिया {time}s)
+resultsScore = अंक: {score}
+resultsNum        = {[ plural(n) ]}
+resultsNum[zero]  = कोई परिणाम नहीं
+resultsNum[one]   = {{ n }} परिणाम
+resultsNum[two]   = {{ n }} परिणाम
+resultsNum[few]   = {{ n }} परिणाम
+resultsNum[many]  = {{ n }} परिणाम
+resultsNum[other] = {{ n }} परिणाम
+search = खोज
+supportEmail = समर्थन ईमेल
+supportSite = समर्थन साइट
+privacyPolicy = गोपनीय नीति
+homepage = मुखपृष्ठ
+reportAbuse = अपशब्द रिपोर्ट करें
+categoryHome      = घर
+categoryGames     = खेल
+categoryLifestyle = जीवनशैली
+categoryTools     = औज़ार
+iarcRating         = {0}+ उम्र के लिए
+iarcDiscrimination = भेदभाव
+iarcDrugs          = औषधि
+iarcGambling       = जुआ
+iarcLang           = भाषा
+iarcOnline         = ऑनलाइन
+iarcFear           = डर
+iarcSex            = लिंग
+iarcViolence       = हिंसा
+iarcPurchases      = डिजिटल खरीदारी
+iarcInfo           = शेयर्स की जानकारी
+iarcLocation       = शेयर्स के स्थान
+iarcInteract       = उपयोक्ता के बातचीत
+iarcEveryone       = हर कोई
+more = अधिक
+feedbackError   = प्रतिक्रिया सफलतापूर्वक भेजा नहीं गया था. बाद में पुन: प्रयास करें.
+feedbackLink    = प्रतिक्रिया
+feedbackOffline = क्षमा करें, प्रतिक्रिया प्रस्तुत करने के लिए आपको ऑनलाइन होना होगा.
+feedbackSubmit  = प्रतिक्रिया सबमिट करें
+feedbackSuccess = प्रतिक्रिया सफलतापूर्वक भेजा गया
+tosLink = प्रयोग की शर्तें
+reviewCount        = {[ plural(n) ]}
+reviewCount[zero]  = अभी तक कोई समीक्षा नहीं
+reviewCount[one]   = {{ n }} समीक्षा
+reviewCount[two]   = {{ n }} समीक्षा
+reviewCount[few]   = {{ n }} समीक्षा
+reviewCount[many]  = {{ n }} समीक्षा
+reviewCount[other] = {{ n }} समीक्षा
